--- a/src/components/styles/HeaderProfile.scss
+++ b/src/components/styles/HeaderProfile.scss
@@ -23,6 +23,7 @@
       color: white;
       font-family: $font-pixel;
       letter-spacing: 2px;
+      text-transform: uppercase;
     }
   }
   button {
