--- a/src/containers/styles/Tweets.scss
+++ b/src/containers/styles/Tweets.scss
@@ -1,6 +1,6 @@
 .Tweets {
   background-color: #2e132c;
-  height: 400px;
+  max-height: auto;
   margin: 0 auto;
   min-width: 320px;
   max-width: 610px;
