pagina profile con posts, favoritos y logout

--- a/src/components/styles/Tweet.scss
+++ b/src/components/styles/Tweet.scss
@@ -1,5 +1,6 @@
 @import "./App.scss";
 .Tweet {
+  width: 100%;
   grid-template-columns: 60px 1fr;
   grid-template-rows: 40px 1fr 60px;
   display: grid;
