--- a/src/containers/styles/Tweets.scss
+++ b/src/containers/styles/Tweets.scss
@@ -4,4 +4,10 @@
   margin: 0 auto;
   min-width: 320px;
   max-width: 610px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .Nothing {
+    margin-top: 20px;
+  }
 }
